--- a/src/Common.props
+++ b/src/Common.props
@@ -48,25 +48,29 @@
     <xrSdkDir>$(SolutionDir)..\sdk\</xrSdkDir>
     <xrExternals>$(SolutionDir)..\Externals\</xrExternals>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(ConfigurationType)'=='Application'">
-    <OutDir>$(xrBinDir)</OutDir>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(ConfigurationType)'=='DynamicLibrary'">
-    <OutDir>$(xrBinDir)</OutDir>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(ConfigurationType)'=='StaticLibrary'">
-    <OutDir>$(xrLibDir)</OutDir>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(ConfigurationType)'=='Makefile'">
-    <OutDir>$(xrLibDir)</OutDir>
-  </PropertyGroup>
-  <PropertyGroup>
+
+  <PropertyGroup Label="OutputDirectories">
+    <OutDir Condition="'$(ConfigurationType)'=='Application'"   >$(xrBinDir)</OutDir>
+    <OutDir Condition="'$(ConfigurationType)'=='DynamicLibrary'">$(xrBinDir)</OutDir>
+    <OutDir Condition="'$(ConfigurationType)'=='StaticLibrary'" >$(xrLibDir)</OutDir>
+    <OutDir Condition="'$(ConfigurationType)'=='Makefile'"      >$(xrLibDir)</OutDir>
+
     <IntDir>$(xrIntDir)$(ProjectName)\</IntDir>
   </PropertyGroup>
+
+  <PropertyGroup Condition="$(Configuration.StartsWith('Debug'  ))"> <UseDebugLibraries>true</UseDebugLibraries> </PropertyGroup>
+  <PropertyGroup Condition="$(Configuration.StartsWith('Mixed'  ))"> <UseDebugLibraries>false</UseDebugLibraries> </PropertyGroup>
+  <PropertyGroup Condition="$(Configuration.StartsWith('Release'))"> <UseDebugLibraries>false</UseDebugLibraries> </PropertyGroup>
+
+  <PropertyGroup Condition="$(Configuration.StartsWith('Debug'  ))"> <LinkIncremental>true</LinkIncremental> </PropertyGroup>
+  <PropertyGroup Condition="$(Configuration.StartsWith('Mixed'  ))"> <LinkIncremental>false</LinkIncremental> </PropertyGroup>
+  <PropertyGroup Condition="$(Configuration.StartsWith('Release'))"> <LinkIncremental>false</LinkIncremental> </PropertyGroup>
+
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>./;$(SolutionDir);$(xrExternals);$(ProjectDir);$(xrSdkDir)include;$(xrSdkDir)DXSDK/Include;$(xrExternals)luajit/src;$(xrExternals)luabind;$(xrExternals)GameSpy/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <AdditionalIncludeDirectories>.;$(SolutionDir);$(xrExternals);$(ProjectDir);$(xrSdkDir)include;$(xrSdkDir)DXSDK/Include;$(xrExternals)luajit/src;$(xrExternals)luabind;$(xrExternals)GameSpy/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <!-- Optimization is automatically enabled when <UseDebugLibraries>false</UseDebugLibraries>. That's why we'll turn it off manually -->
+      <Optimization Condition="$(Configuration.StartsWith('Mixed'))">Disabled</Optimization>
       <!--
         4251 : class 'x' needs to have dll-interface to be used by clients of class 'y'
         4275 : non dll-interface class 'x' used as base for dll-interface class 'y' 
@@ -79,10 +83,16 @@
         _SECURE_SCL=0;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE : temporary workaround for deprecated API
       -->
       <PreprocessorDefinitions>LUABIND_DYNAMIC_LINK;MSVC;dSINGLE;WIN32;_SECURE_SCL=0;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <FloatingPointModel>Fast</FloatingPointModel>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
+      <WarningLevel>Level4</WarningLevel>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(xrSdkDir)libraries;$(xrLibDir);$(xrSdkDir)DXSDK/Lib/$(PlatformShortName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ImportLibrary>$(xrLibDir)$(TargetName).lib</ImportLibrary>
+      <LargeAddressAware>true</LargeAddressAware>
+      <SubSystem>Windows</SubSystem>
     </Link>
     <Lib>
       <AdditionalLibraryDirectories>$(xrSdkDir)libraries;$(xrLibDir);$(xrSdkDir)DXSDK/Lib/$(PlatformShortName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
